--- a/Zalando lite/CSS/style.css
+++ b/Zalando lite/CSS/style.css
@@ -1,3 +1,13 @@
-img{
-    width: 700px, lenght= 500px;
+#mainlogo {
+    width: 100%;
+    max-width: 250px;
+    display: block;
+    margin: 0px auto;
+}
+img {
+    width: 100%;
+    max-width: 400px;
+}
+#hovednavigasjon {
+    display: block;
 }
