--- a/Zalando lite/CSS/style.css
+++ b/Zalando lite/CSS/style.css
@@ -1,13 +1,77 @@
+
+html{
+    font-size: 18px;
+}
+
+* {
+    box-sizing: border-box;
+}
+    
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#grid-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: auto auto auto;
+}
+
+img {
+    width: 100%;
+    max-width: 400px;
+}
+
 #mainlogo {
     width: 100%;
     max-width: 250px;
     display: block;
     margin: 0px auto;
 }
-img {
-    width: 100%;
-    max-width: 400px;
+
+.flex-menu {
+    display: flex;
+    list-style: none;
+    gap: 1rem;
+    padding: 0;
+    margin: 0;
+    flex-wrap: wrap;
 }
-#hovednavigasjon {
-    display: block;
+
+.flex-menu a {
+    text-decoration: none;
+    color: black;
+}
+
+.flex-space-b {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.flex-space-b h2 {
+    width: 100%;
+}
+
+.flex-space-b form {
+    position: relative;
+}
+
+.flex-space-b label {
+    visibility: hidden;
+    position: absolute;
+}
+
+#outlet {
+    color: #ff0000;
+}
+
+.product-card {
+    max-width: 350px;
+    min-width: 200px;
+    width: 100%;
+    box-shadow: 13px 9px 20px 0px #efefef;
+    border-radius: 4px;
+    padding: 1rem;
 }
