--- a/Zalando lite/CSS/style.css
+++ b/Zalando lite/CSS/style.css
@@ -15,6 +15,57 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: auto auto auto;
+    row-gap: 2rem;
+}
+
+#global-header {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row: 1 / 2;
+}
+
+#banner {
+    display: flex;
+    flex-wrap: wrap;
+
+    img {
+        max-width: 70%;
+    }
+}
+
+main {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+main nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 1rem;
+
+    a {
+        color: #474747;
+    }
+}
+
+#category-menu {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+#category-menu nav ul {
+    list-style: none;
+}
+
+footer {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 img {
@@ -74,4 +125,44 @@ img {
     box-shadow: 13px 9px 20px 0px #efefef;
     border-radius: 4px;
     padding: 1rem;
+}
+
+@media only screen and (min-width: 800px) {
+    .fa-burger {
+        display:none;
+    }
+    #menu {
+        display: felx !important;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #menu {
+        display: none;
+    }
+
+    #grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+    }
+
+    header, main, aside, footer {
+        grid-column: 1/2;
+    }
+
+    header {
+        grid-row: 1/2;
+    }
+
+    main {
+        grid-row: 2/3;
+    }
+
+    aside {
+        display: none;
+    }
+
+    footer {
+        grid-row: 3/4;
+    }
 }
