--- a/Labøvelser/uke43/css/main.css
+++ b/Labøvelser/uke43/css/main.css
@@ -1,1 +1,30 @@
 /*# sourceMappingURL=main.css.map */
+html {
+    font-size: calc(1em + 1vw);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {font-size: 2rem;}
+h2 {font-size: 1,7rem;}
+h3 {font-size: 1,4rem;}
+
+#grid-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-row: repeat(3, auto);
+    row-gap: 2rem;
+}
+
+main {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
