--- a/Labøvelser/uke43/sass/_mixins.scss
+++ b/Labøvelser/uke43/sass/_mixins.scss
@@ -1,7 +1,19 @@
 @mixin flexbox {
     border: 2px;
+    display: flex;
+    justify-content: center;
 }
 
 @mixin grid {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.artikkel {
+    border: 2rem;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 10px;
 
 }
